# model-service

./: Dockerfile  README.md  encoder.pkl  pyproject.toml  tokenizer.pkl
.github/workflows/: main.yml
model_service/: app.py  utils.py
